# SIRF

./: .bandit  .bash_aliases  .codacy.yml  .coveragerc-Gadgetron  .coveragerc-Reg  .coveragerc-STIR  .coveragerc-torch  .dir-locals.el  .gitattributes  .gitignore  .gitignore.swp  .gitmodules  .mailmap  .travis.yml  .zenodo.json  CHANGES.md  CITATION.cff  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  CTestTestfile.cmake  DeveloperGuide.md  Dockerfile  INSTALL.txt  LICENSE.txt  Makefile  NOTICE.txt  README.md  SuperBuild.cmake  UPDATE.txt  UserGuide.md  UsersGuide.md  build-mac  ci_tw.cpp  cmake_install.cmake  data_handle.cpp  data_handle.h  iUtilities.sln  iUtilities.vcxproj  (+12 more)
cGadgetron/: CMakeLists.txt  Makefile  Makefile_mac  cGadgetron.vcxproj  cGadgetron.vcxproj.filters  cgadgetron.cpp  cgadgetron.h  cgadgetron_par.h  chain_lib.h  gadget_lib.h  gadgetron_client.h  gadgetron_data_containers.h  ismrmrd_fftw.h  noise_filter.cpp  xgadgetron.cpp  xgadgetron.h
doxygen/: CMakeLists.txt  Doxyfile.in  doxygengroups.h  doxymain.h
examples/C++/: CMakeLists.txt  README.md  example_using_sirf.cpp
pGadgetron/: CMakeLists.txt  Makefile  demo4.py  pGadgetron.py  pGadgets.py  pygadgetron.i  pygadgetron.py  pygadgetron.vcxproj
pSTIR/: CMakeLists.txt  Makefile  Makefile_cygwin  OSMAPOSL_test_PM_QP2.par  _pystir.pyd  anonimous.py  bits.cpp  bits.py  my_forward_projection.hs  ossps_demo.py  pStir.py  pystir.i  pystir.py  pystir.vcxproj  pystir_wrap.cxx  reconstructedImage_6.hv  stir.py  stir_demo.py  stir_demo0.py  stir_demo1.py  stir_demo2.py  stir_demo3.py  stir_demo4.py  stir_demo4.txt  test_image.py  test_stir.py  test_time.py
pSTIR/tmp/: pystir.vcxproj
src/: CMakeLists.txt  Doxyfile  Makefile  cgadgetron.cpp  cgadgetron.h  data_handle.cpp  data_handle.h  doxymain.h  gadget_lib.h  gadgetron_client.h  pGadgetron.py  pGadgets.py  pygadgetron.i  pygadgetron.py  test_client.cpp  xgadgetron.h
src/Registration/: CMakeLists.txt  NiftyReg.cmake  SWIG_SIRFReg.in  callable_NR_aladin_methods.txt  callable_NR_f3d_methods.txt  callable_NR_methods.cmake
src/Registration/NiftyMoMo/: BSplineTransformation.cpp  CMakeLists.txt  Transformation.cpp
src/Registration/cReg/: AffineTransformation.cpp  CMakeLists.txt  ControlPointGridToDeformationConverter.cpp  ImageGradientWRTDeformationTimesImage.cpp  ImageGradientWRTTransformation.cpp  ImageWeightedMean.cpp  NiftiBasedRegistration.cpp  NiftiImage.cpp  NiftiImage.h  NiftiImage3D.cpp  NiftiImage3D.h  NiftiImage3DDeformation.cpp  NiftiImage3DDeformation.h  NiftiImage3DDisplacement.cpp  NiftiImage3DDisplacement.h  NiftiImage3DTensor.cpp  NiftiImage3DTensor.h  NiftiImageData.cpp  NiftiImageData.h  NiftiImageData3D.cpp  NiftiImageData3D.h  NiftiImageData3DBSpline.cpp  NiftiImageData3DDeformation.cpp  NiftiImageData3DDeformation.h  NiftiImageData3DDisplacement.cpp  NiftiImageData3DDisplacement.h  NiftiImageData3DTensor.cpp  NiftiImageData3DTensor.h  NiftyAladinSym.cpp  NiftyAladinSym.cpp.in  NiftyF3dSym.cpp  NiftyF3dSym.cpp.in  NiftyRegistration.cpp  NiftyResample.cpp  NiftyResampler.cpp  NonRigidTransformation.cpp  Quaternion.cpp  Registration.cpp  Resample.cpp  SIRFImageData.cpp  (+64 more)
src/Registration/mReg/: CMakeLists.txt  libload_reg.m  libload_sirfreg.m  mSIRFReg.i  mreg.c  mreg.h  msirfreg.c  msirfreg.h  oldCMakeLists.txt  printer.cpp  printer.h
src/Registration/pReg/: CMakeLists.txt  Reg.py  Reg.py.in  Reg_params.py  SIRFReg.py  pSIRFReg.i  pyreg.i  pysirfreg.i  setup.py
src/Registration/swigDoxy/: CMakeLists.txt  Doxyfile.in  SWIG_SIRFReg.in
src/Synergistic/: CMakeLists.txt  sirf_convert_image_type.cpp  sirf_do_images_match.cpp  sirf_registration.cpp  sirf_resample.cpp  test_conv_img.cpp  utilities.cpp
src/Synergistic/cSyn/: CMakeLists.txt  csyn.cpp  utilities.cpp
src/Synergistic/mSyn/: CMakeLists.txt
src/Synergistic/pSyn/: CMakeLists.txt
src/Synergistic/tests/: CMakeLists.txt  test_PoissonGatedMotion.cpp  test_cSynergistic.cpp  test_mSynergistic.m  test_pSynergistic.py
src/common/: CMakeLists.txt  CTestTestfile.cmake  DataContainer.cpp  DataContainer.m  GeometricalInfo.cpp  ImageData.cpp  Makefile  SIRF.py  SIRF_torch.py  Utilities.py  cmake_install.cmake  csirf.cpp  csirf.h  examples_data_path.m.in  geometrical_info.cpp  iequals.cpp  libload_sirf.m  mig.cpp  mr_data_path.m  msirf.c  msirf.h  pUtil.py  pUtilities.py  parameters.py  parameters.py.in  pet_data_path.m  pysirf.i  run_all_scripts.m  select_module.py  set_up_MR.m  set_up_PET.m  set_up_Reg.m  set_up_engine.m  set_up_mr.m  set_up_pet.m  setup_MR.m  setup_PET.m  show_image.py  syn_utilities.cpp  utilities.cpp  (+4 more)
src/common/+mSIRF/: DataContainer.m  ImageData.m
src/common/+mUtil/: check_status.m  set_window.m  show_2D_array.m  show_3D_array.m  str_to_int_list.m
src/common/+mUtilities/: assert_validities.m  assert_validity.m  check_status.m  delete.m  examples_data_path.m  label_and_name.m  mTest.m  run_all_scripts.m  show_2D_array.m  show_3D_array.m
src/common/gmi/: CMakeLists.txt  gmi_csirf.cpp
src/common/tests/: CMakeLists.txt  test_algebra.py  test_version.cpp
src/iUtilities/: CMakeLists.txt  CTestTestfile.cmake  Makefile  data_handle.h  gmi.cpp  iUtilities.vcxproj  iutilities.cpp  iutilities.h  localised_exception.h  miutilities.c  miutilities.h  mutilities.c  mutilities.h  pyiutilities.i  pyiutilities.py  shared_ptr.h
src/iUtilities/c2m/: c2m.cpp  c2m.sln  c2m.vcxproj  c2m.vcxproj.filters  main.cpp  mstir.c  mstir.h
src/iUtilities/gmi/: CMakeLists.txt  gmi.cpp
src/pCIL/: __init__.py  functions.py  spdhg.py
src/torch/: CMakeLists.txt  README.md  SIRF_torch.py  gradchecks.py  test_cases.py  torch.py  use_cases.py
src/torch/tests/: gradchecks.py  pytest.ini  test_grad.py  test_null.py  use_cases.py  varnet_minimal.py
src/xDynamicSimulation/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  git_corrup_object_fix.sh
src/xDynamicSimulation/cDynamicSimulation/: Makefile  (+33 more)
src/xGadgetron/: CMakeLists.txt  CTestTestfile.cmake  Makefile
src/xSTIR/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
(+1445 files in other folders)
